--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "jsdoc:build": "jsdoc ./src ./src/components/App ./src/components/Form ./src/hooks ./README.md -d ./documentation"
   },
   "eslintConfig": {
     "extends": [
