--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "not dead",
       "not op_mini all"
     ],
-    "homepage": "https://dnwd843.github.io/register-form/",
+    "homepage": ".",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
