--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amigoweb-form",
+  "name": "register-form",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -33,7 +33,7 @@
       "not dead",
       "not op_mini all"
     ],
-    "homepage": ".",
+    "homepage": "https://dnwd843.github.io/register-form/",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
