--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "jsdoc:build": "jsdoc ./src ./src/components/App ./src/components/Form ./src/hooks ./README.md -d ./documentation"
   },
@@ -33,7 +32,7 @@
       "not dead",
       "not op_mini all"
     ],
-    "homepage": "https://dnwd843.github.io/",
+    "homepage": ".",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
