--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "register-form",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -17,6 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "jsdoc:build": "jsdoc ./src ./src/components/App ./src/components/Form ./src/hooks ./README.md -d ./documentation"
   },
@@ -32,7 +32,7 @@
       "not dead",
       "not op_mini all"
     ],
-    "homepage": ".",
+    "homepage": "https://dnwd843.github.io/register-form/",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
